--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -11,7 +13,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+pip==24.0
+PyJWT==2.8.0
 SQLAlchemy==2.0.29
 typing_extensions==4.10.0
 Werkzeug==3.0.1
-PyJWT==2.8.0
